# silk-codec

./: .gitignore  CMakeLists.txt  README.MD
jni/: com_l1yp_SilkCodec.c  com_l1yp_SilkCodec.h
jni/linux/: jni.h  jni_md.h
test/: Decoder.c  Encoder.c  silk_codec.c  silk_codec.h
